		3. Fix file descriptor leakage - we should close /dev/ptmx
		   after forking. Thanks to Edgar Toernig for the report
		   and patch.
		4. Always show cursor while mrxvt loses focus. Thanks to
		   Edgar Toernig for the patch.
		5. Adjust several limits, e.g., max border width and min
		   blink time according to Edgar Toernig's patch.
		6. Fix rpmbuild (Sourceforge Bug #1482311)

	* Enhancements:
		1. Enable multiple bold fonts. Thanks to Edgar Toernig for
		   the patch.

Gautam Iyer <gi1242@users.sourceforge.net>
	* Bug Fixes:
		1. Macros now ignore the state of caps lock (as they should).
		2. The highlight flag is now set even if the tabbar is hidden (so
		   showing the tabbar will show which tab produced the beep).
		3. Macros without modifiers did not work. Fixed this.
		4. Ignore SIGHUP (caused exit when parent shell is killed).
		5. Ignore SIGPIPE (caused exit when print command crashes).
		6. Some Xft fonts, e.g., aquafont, report double the actual width.
           This cause some text being clustered together while the cursor
           and user input have double size. Test, and correct for this.
           Notice that this fix will work for fontconfig 2.3.2 (as we have
           tested) or later version, and you must run ``fc-cache -f'' after
           upgrading fontconfig. It will not work for fontconfig 2.2.3 and
		   earlier versions due to the bug of fontconfig.
		7. Also dump initial tab titles when the --cmdInitTabs options are
		   given (this used to cause incorrect behaviour when the user closes
		   tab 0, and opens a new tab).
		8. Fixed bug #1473987. (Jagged edges of screen fonts)
		9. Fixed bug #1357219. (Made bg changes via escape sequences sticky)

	* Enhancements:
		1. Warn if closing mrxvt with multiple tabs (and the tabbar is
		   hidden).
		2. Code cleanup (OK. That's not really an enhancement for users)
		3. Update documentation.

	* New features:
		1. Changed the behaviour of the --vt%d.xx resources. The settings are